compiler/toc-hir-lowering/tests/snapshots/lowering__lower_if_stmt-7.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: if then end if
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(0)
    Module@(src/main.t:0..14): "<root>"@(dummy)
      StmtBody@(src/main.t:0..14): []
        If@(src/main.t:0..14)
          Block@(src/main.t:8..8): Normal
error at src/main.t:3..7: unexpected token
| error for src/main.t:3..7: expected expression, but found `then`
