compiler/toc-hir-lowering/tests/snapshots/lowering__lower_if_stmt.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\n    if true then\n        var a := 1\n    end if\n    "
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..52): "<root>"@(dummy)
      StmtBody@(src/main.t:5..47): []
        If@(src/main.t:5..47)
          Literal@(src/main.t:8..12): Boolean(true)
          Block@(src/main.t:26..36): Normal
            StmtItem@(src/main.t:26..36): ItemId(0)
              ConstVar@(src/main.t:26..36): var "a"@(src/main.t:30..31)
                ExprBody@(src/main.t:35..36)
                  Literal@(src/main.t:35..36): Integer(1)
