compiler/toc-hir-lowering/tests/snapshots/lowering__lower_import_stmt-10.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\n    module *_\n        import _\n    end _\n    "
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(2)
    Module@(FileId(1), 0..46): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..41): []
        StmtItem@(FileId(1), 5..41): ItemId(1)
          Module@(FileId(1), 5..41): "_"@(FileId(1), 13..14)
            Import@(FileId(1), 30..31): SameAsItem local("_"@(FileId(1), 13..14))
            StmtBody@(FileId(1), 36..36): []
error at (FileId(1), 30..31): `_` is already imported in this scope
| note for (FileId(1), 13..14): `_` declared pervasive here
| error for (FileId(1), 30..31): `_` re-imported here
| info: `_` was declared pervasively, so it's already imported

