compiler/toc-hir-lowering/tests/snapshots/lowering__lower_import_stmt-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\n    var a : int\n    module _\n        import const var a\n    end _"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(3)
    Module@(FileId(1), 0..66): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..66): []
        StmtItem@(FileId(1), 5..16): ItemId(0)
          ConstVar@(FileId(1), 5..16): var "a"@(FileId(1), 9..10)
            Primitive@(FileId(1), 13..16): Int
        StmtItem@(FileId(1), 21..66): ItemId(2)
          Module@(FileId(1), 21..66): "_"@(FileId(1), 28..29)
            Import@(FileId(1), 45..56): SameAsItem local("a"@(FileId(1), 9..10))
            StmtBody@(FileId(1), 61..61): []
error at (FileId(1), 51..54): cannot use `const` and `var` on the same import
| error for (FileId(1), 45..50): first conflicting `const`
| error for (FileId(1), 51..54): first conflicting `var`

