compiler/toc-hir-lowering/tests/snapshots/lowering__lower_import_stmt-3.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\n    var a : int\n    module _\n        import forward a\n    end _"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(3)
    Module@(src/main.t:0..64): "<root>"@(dummy)
      StmtBody@(src/main.t:5..64): []
        StmtItem@(src/main.t:5..16): ItemId(0)
          ConstVar@(src/main.t:5..16): var "a"@(src/main.t:9..10)
            Primitive@(src/main.t:13..16): Int
        StmtItem@(src/main.t:21..64): ItemId(2)
          Module@(src/main.t:21..64): "_"@(src/main.t:28..29)
            Import@(src/main.t:45..54): SameAsItem local("a"@(src/main.t:9..10))
            StmtBody@(src/main.t:59..59): []
error at src/main.t:45..52: unsupported import attribute
| error for src/main.t:45..52: `forward` imports are not supported yet
error at src/main.t:45..52: cannot use `forward` attribute here
| error for src/main.t:45..52: `forward` attribute can only be used in `forward` declarations
