compiler/toc-hir-lowering/tests/snapshots/lowering__lower_import_stmt-4.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "\n    var a, b, c : int\n    proc _\n        import a, var b, const c\n    end _"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(7)
    Module@(FileId(1), 0..76): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..76): []
        StmtItem@(FileId(1), 5..22): ItemId(0)
          ConstVar@(FileId(1), 5..22): var "a"@(FileId(1), 9..10)
            Primitive@(FileId(1), 19..22): Int
        StmtItem@(FileId(1), 5..22): ItemId(1)
          ConstVar@(FileId(1), 5..22): var "b"@(FileId(1), 12..13)
            Primitive@(FileId(1), 19..22): Int
        StmtItem@(FileId(1), 5..22): ItemId(2)
          ConstVar@(FileId(1), 5..22): var "c"@(FileId(1), 15..16)
            Primitive@(FileId(1), 19..22): Int
        StmtItem@(FileId(1), 27..76): ItemId(6)
          Subprogram@(FileId(1), 27..76): "_"@(FileId(1), 32..33)
            Void@(FileId(1), 27..33)
            Import@(FileId(1), 49..50): SameAsItem local("a"@(FileId(1), 9..10))
            Import@(FileId(1), 52..57): Explicit(Var, SpanId(13)) local("b"@(FileId(1), 12..13))
            Import@(FileId(1), 59..66): Explicit(Const, SpanId(15)) local("c"@(FileId(1), 15..16))
            StmtBody@(FileId(1), 71..71): []

