compiler/toc-hir-lowering/tests/snapshots/lowering__lower_import_stmt-6.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\n    var a : int\n    proc _\n        import forward a\n    end _"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(3)
    Module@(FileId(1), 0..62): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..62): []
        StmtItem@(FileId(1), 5..16): ItemId(0)
          ConstVar@(FileId(1), 5..16): var "a"@(FileId(1), 9..10)
            Primitive@(FileId(1), 13..16): Int
        StmtItem@(FileId(1), 21..62): ItemId(2)
          Subprogram@(FileId(1), 21..62): "_"@(FileId(1), 26..27)
            Void@(FileId(1), 21..27)
            Import@(FileId(1), 43..52): SameAsItem local("a"@(FileId(1), 9..10))
            StmtBody@(FileId(1), 57..57): []
error at (FileId(1), 43..50): unsupported import attribute
| error for (FileId(1), 43..50): `forward` imports are not supported yet
error at (FileId(1), 43..50): cannot use `forward` attribute here
| error for (FileId(1), 43..50): `forward` attribute can only be used in `forward` declarations

