compiler/toc-hir-lowering/tests/snapshots/lowering__lower_import_stmt-9.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\n    module _\n        import _\n    end _\n    "
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(2)
    Module@(src/main.t:0..45): "<root>"@(dummy)
      StmtBody@(src/main.t:5..40): []
        StmtItem@(src/main.t:5..40): ItemId(1)
          Module@(src/main.t:5..40): "_"@(src/main.t:12..13)
            Import@(src/main.t:29..30): SameAsItem local("_"@(src/main.t:12..13))
            StmtBody@(src/main.t:35..35): []
error at src/main.t:29..30: `_` is already declared in this scope
| note for src/main.t:12..13: `_` previously declared here
| error for src/main.t:29..30: `_` imported here
