compiler/toc-hir-lowering/tests/snapshots/lowering__lower_import_stmt.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "\n    var a, b, c : int\n    module _\n        import a, var b, const c\n    end _"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(7)
    Module@(FileId(1), 0..78): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..78): []
        StmtItem@(FileId(1), 5..22): ItemId(0)
          ConstVar@(FileId(1), 5..22): var "a"@(FileId(1), 9..10)
            Primitive@(FileId(1), 19..22): Int
        StmtItem@(FileId(1), 5..22): ItemId(1)
          ConstVar@(FileId(1), 5..22): var "b"@(FileId(1), 12..13)
            Primitive@(FileId(1), 19..22): Int
        StmtItem@(FileId(1), 5..22): ItemId(2)
          ConstVar@(FileId(1), 5..22): var "c"@(FileId(1), 15..16)
            Primitive@(FileId(1), 19..22): Int
        StmtItem@(FileId(1), 27..78): ItemId(6)
          Module@(FileId(1), 27..78): "_"@(FileId(1), 34..35)
            Import@(FileId(1), 51..52): SameAsItem local("a"@(FileId(1), 9..10))
            Import@(FileId(1), 54..59): Explicit(Var, SpanId(12)) local("b"@(FileId(1), 12..13))
            Import@(FileId(1), 61..68): Explicit(Const, SpanId(14)) local("c"@(FileId(1), 15..16))
            StmtBody@(FileId(1), 73..73): []

