compiler/toc-hir-lowering/tests/snapshots/lowering__lower_init_expr-2.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "var _ := init(1, 2, 3, 4)"

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..25): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..25): []
        StmtItem@(FileId(1), 0..25): ItemId(0)
          ConstVar@(FileId(1), 0..25): var "_"@(FileId(1), 4..5)
            ExprBody@(FileId(1), 9..25)
              InitExpr@(FileId(1), 9..25)
                ExprBody@(FileId(1), 14..15)
                  Literal@(FileId(1), 14..15): Integer(1)
                ExprBody@(FileId(1), 17..18)
                  Literal@(FileId(1), 17..18): Integer(2)
                ExprBody@(FileId(1), 20..21)
                  Literal@(FileId(1), 20..21): Integer(3)
                ExprBody@(FileId(1), 23..24)
                  Literal@(FileId(1), 23..24): Integer(4)
error in file FileId(1) at 9..25: mismatched initializer
| error in file FileId(1) for 9..25: `init` initializer is not allowed here
| info: `init` initializer requires a type to be specified

